@startuml
class PetriNetModel::ArcPT {
  + inscription : str
}
class PetriNetModel::ArcTP {
  + inscription : str
}
class PetriNetModel::PetriNet {
  + name : str
}
class PetriNetModel::Place {
  + name : str
  + token : str
}
class PetriNetModel::Transition {
  + name : str
}
PetriNetModel::ArcPT "0..9999" --* "1..1" PetriNetModel::PetriNet : arcPT1
PetriNetModel::ArcTP "0..9999" --* "1..1" PetriNetModel::PetriNet : arcTP3
PetriNetModel::ArcPT "1..1" -- "0..1" PetriNetModel::Place : place16
PetriNetModel::Place "0..1" -- "1..1" PetriNetModel::ArcTP : place19
PetriNetModel::PetriNet "1..1" *-- "0..9999" PetriNetModel::Place : place5
PetriNetModel::ArcTP "0..9999" -- "1..1" PetriNetModel::Transition : postArc10
PetriNetModel::ArcPT "0..9999" -- "1..1" PetriNetModel::Place : postArc28
PetriNetModel::ArcTP "0..9999" -- "1..1" PetriNetModel::Place : preArc25
PetriNetModel::ArcPT "0..9999" -- "1..1" PetriNetModel::Transition : preArc7
PetriNetModel::PetriNet "1..1" *-- "0..9999" PetriNetModel::Transition : transition0
PetriNetModel::Transition "0..1" -- "1..1" PetriNetModel::ArcPT : transition13
PetriNetModel::Transition "0..1" -- "1..1" PetriNetModel::ArcTP : transition22
@enduml